# matrix-softmax

./: .gitignore  CMakeLists.txt  softmax.cpp  softmax.cu
include/: matrix.hpp  softmax.hpp  utils.hpp
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  matrix.cpp  softmax.cpp  utils.cpp
